--- a/Prototype/YaronG/thalinode/package.json
+++ b/Prototype/YaronG/thalinode/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
     },
     "dependencies": {
         "morgan": "~1.3.0",
@@ -13,12 +13,14 @@
         "q": "*",
         "express": "*",
         "pouchdb": "*",
-        "express-pouchdb": "*"
+        "express-pouchdb": "*",
+        "requestretry": "*"
     },
     "devDependencies": {
         "mocha":"*",
         "chai": "*",
         "chai-as-promised": "*",
-        "node-forge": "*"
+        "node-forge": "*",
+        "request" : "*"
     }
 }
