--- a/Prototype/YaronG/thalinode/package.json
+++ b/Prototype/YaronG/thalinode/package.json
@@ -14,7 +14,8 @@
         "express": "*",
         "pouchdb": "*",
         "express-pouchdb": "*",
-        "requestretry": "*"
+        "requestretry": "*",
+        "string": "*"
     },
     "devDependencies": {
         "mocha":"*",
